--- a/css/style-index.css
+++ b/css/style-index.css
@@ -140,3 +140,54 @@ header {
 .submenu__link:hover {
     background-color: var(--primary-900);
 }
+/* HERO  */
+.hero {
+    background-image: url(../img/funkos-banner.webp);
+    padding: var(--spacing-128);
+    background-position: top;
+    background-size: cover;
+    background-attachment: fixed;
+    position: relative;
+}
+.hero::before {
+    content: '';
+    background-color: rgba(0, 0, 0, .0);
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    position: absolute;
+    backdrop-filter: blur(2px) brightness(.9);
+    z-index: 1;
+}
+.hero__content {
+    display: flex;
+    flex-direction: column;
+    gap: var(--spacing-20);
+    align-items: start;
+    z-index: 2;
+    position: relative;
+}
+.hero__title {
+    font-family: var(--alternative-font);
+    font-size: var(--font-jumbo);
+    color: var(--light-font-solid);
+}
+.hero__text {
+    font-family: var(--alternative-font);
+    font-size: var(--font-medium);
+    color: var(--light-font-solid);
+}
+.hero__link {
+    display: inline-block;
+    font-size: var(--font-medium);
+    background-color: var(--ligth-bg-solid);
+    padding: var(--spacing-12) var(--spacing-68);
+    border-radius: 50px;
+    font-weight: 500;
+    transform: all .3s easy-in-out;
+}
+.hero__link:hover {
+    background-color: var(--primary-900);
+    color: var(--light-font-solid);
+}
