[FEAT] footer styles

--- a/css/style-index.css
+++ b/css/style-index.css
@@ -300,6 +300,16 @@ header {
     font-weight: 700;
 }
 
+/* Footer*/
+.footer {
+    background-color: var(--dark-bg-solid);
+    padding: var(--spacing-68);
+}
+.footer__copy {
+    text-align: center;
+    margin-top: var(--spacing-36);
+}
+/*Animations*/
 @keyframes fade {
     0% {
         opacity: 0;
@@ -308,3 +318,5 @@ header {
         opacity: 1;
     }
 }
+
+
