--- a/css/style-index.css
+++ b/css/style-index.css
@@ -246,11 +246,23 @@ header {
     font-size: var(--font-display);
     text-transform: uppercase;
 }
-.slider__items {
-    display: flex;
-    gap: var(--spacing-24);
+iconify-icon {
+    color: var(--dark-bg-solid);
+    font-size: var(--font-small);
+    font-weight: 700;
 }
 
+/* OVERRIDE */
+
+.glide__arrow--left {
+    left: 0;
+}
+
+.glide__arrow--right {
+    right: 0;
+}
+
+/*Card*/
 .card-item__cover {
     display: flex;
     position: relative;
